setup/application/zerok-controller-base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
  labels:
    app: zerok-controller
    dep: default
spec:
  selector:
    app: zerok-controller
    dep: default
  type: ClusterIP # LoadBalancer # NodePort # 
  ports:
    - protocol: TCP
      name: m-http  
      port: 80
      targetPort: 3000
